[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Unarmed_Script.gd" type="Script" id=1]
[ext_resource path="res://Assets/Characters/Skeleton/EA_SkeletonRightWalk/Hands/MEA_Skeleton64_Hands_WalkRight1.png" type="Texture" id=2]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[node name="Unarmed_BaseNode" type="Area2D"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )

[node name="Weapon_Sprite" type="AnimatedSprite" parent="." index="0"]

frames = SubResource( 1 )
animation = "default"
_sections_unfolded = [ "Visibility" ]

[node name="Icon_Sprite" type="Sprite" parent="." index="1"]

visible = false
texture = ExtResource( 2 )

[node name="Collision_Down" type="CollisionShape2D" parent="." index="2"]

shape = SubResource( 2 )
disabled = true

[node name="Collision_Up" type="CollisionShape2D" parent="." index="3"]

shape = SubResource( 2 )
disabled = true

[node name="Collision_Right" type="CollisionShape2D" parent="." index="4"]

shape = SubResource( 2 )
disabled = true

[node name="Collision_Left" type="CollisionShape2D" parent="." index="5"]

shape = SubResource( 2 )
disabled = true


